--- a/index.html
+++ b/index.html
@@ -75,6 +75,16 @@
       </div>
       <div class="row no-gutters">
 	  <div class="col-sm-12 ">
+	  
+	       <a class="portfolio-item" href="https://rpubs.com/leander/852729" >
+           <div class="caption"> 
+              <div class="caption-content">
+                <div class="h2"> AIRFLOW BATCH DATA PIPELINE </div>
+                <p class="mb-0">Building a batch data pipeline using postgres,apache spark,airflow, cloud sorage and bigquery</p>
+              </div>
+            </div>
+            <img class="img-fluid" src="img/portfolio-8.jpeg" alt="">
+          </a>
 	
           <a class="portfolio-item" href="https://rpubs.com/leander/852729" >
            <div class="caption"> 
@@ -85,6 +95,16 @@
             </div>
             <img class="img-fluid" src="img/portfolio-7.jpg" alt="">
           </a>
+		  <a class="portfolio-item" href="https://rpubs.com/leander/RESTAURANT-DATA" >
+           <div class="caption"> 
+              <div class="caption-content">
+                <div class="h2"> RESTAURANT DATA MINING USING MONGODB AND GOOGLE CLOUD </div>
+                <p class="mb-0">An analysis of restaurants in New Delhi </p>
+              </div>
+            </div>
+            <img class="img-fluid" src="img/portfolio-5.jpg" alt="">
+          </a>
+		 
         </div>
         <div class="col-lg-6">
           <a class="portfolio-item" href="https://public.tableau.com/profile/leander5762#!/">
@@ -132,29 +152,9 @@
           </a>
         </div>
 		
-		<div class="col-lg-6">
-          <a class="portfolio-item" href="https://rpubs.com/leander/RESTAURANT-DATA">
-            <div class="caption">
-              <div class="caption-content">
-                <div class="h2">RESTAURANT DATA MINING USING MONGODB AND GOOGLE CLOUD</div>
-                <p class="mb-0">An analysis of restaurants in New Delhi .</p>
-              </div>
-            </div>
-            <img class="img-fluid" src="img/portfolio-5.jpg" alt="">
-          </a>
-         </div>
 		
-		<div class="col-lg-6">
-          <a class="portfolio-item" href="https://rpubs.com/leander/AIRFLOW-PIPELINE" >
-            <div class="caption">
-              <div class="caption-content">
-                <div class="h2">DATA PIPELINE USING AIRFLOW</div>
-                <p class="mb-0">Building a data pipeline using apache airflow</p>
-              </div>
-            </div>
-            <img class="img-fluid" src="img/portfolio-6.jfif" alt="">
-          </a>
-        </div>
+		
+		
 		
 		
 		
